--- a/src/app/pages/main/banner/banner.component.html
+++ b/src/app/pages/main/banner/banner.component.html
@@ -1,21 +1,21 @@
 <div class="home-slider">
     <div class="home-slider--wrapper">
         <div>
-            <div class="home-slider--wrapper__inner" style="background-image: url('assets/img/slider.jpg')">
+            <div class="home-slider--wrapper__inner" style="background-image: url('assets/img/background.jpeg')">
                 <div class="container">
-                    <h3>Bluish Global is a global seafood leader with ambitious growth goals and a dedication to sustainability and innovation.</h3>
-                    <!-- <h1>WELCOME TO LIKE</h1> -->
+                    <h3>Our Clinets Are Our First Priority</h3>
+                    <h1>WELCOME TO BLUISH GLOBAL</h1>
                     <span class="dot-dash">.</span>
-                    <p>We are one of the first specialized companies in its field and has accumulated expertise and advanced infrastructure in the aquaculture, food and seafood industries, wholesale sectors, Trade and the management of a number of seafood restaurants. </p>
+                    <p>Bluish Global is a global seafood leader with ambitious growth goals and a dedication to sustainability and innovation. We are one of the first specialized companies in its field and has accumulated expertise and advanced infrastructure in the aquaculture, food and seafood industries, wholesale sectors, Trade and the management of a number of seafood restaurants. </p>
                     <div class="slider-buttons">
-                        <a href="https://www.alasmak.com.sa/en/commercial-sector/index.html" class="button">Get Started Now</a>
+                        <a href="https://www.alasmak.com.sa/en/commercial-sector/index.html" class="button">CONTACT NOW</a>
                         <!-- <a href="#" class="button button-w">Learn More</a> -->
                     </div>
                 </div>
             </div>
         </div>
         <!-- <div>
-          <div class="home-slider--wrapper__inner" style="background-image: url('assets/img/slider.jpg')">
+          <div class="home-slider--wrapper__inner" style="background-image: url('assets/img/background.jpeg')">
               <div class="container">
                   <h3>Our clients are our first priority</h3>
                   <h1>WELCOME TO LIKE 2</h1>
@@ -68,7 +68,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-5 col-sm-12 col-xs-12">
-                    <img src="assets/img/Monitor.png" alt="" />
+                    <img src="assets/img/side.jpeg" alt="" />
                 </div>
                 <div class="col-md-7 col-sm-12 col-xs-12">
                     <h2>Our History</h2>
@@ -81,7 +81,7 @@
     </section>
     <section class="case-study">
         <div class="container">
-            <h2>Case Study</h2>
+            <h2>MAIN ITEMS</h2>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
             <span class="dot-dash dark">.</span>
         </div>
@@ -91,19 +91,19 @@
                     <div class="case-study--left__textslider">
                         <div>
                             <div class="case-study--left__textslider__image"><i class="fa fa-lightbulb-o" aria-hidden="true"></i></div>
-                            <h4>Accumulate creative ideas</h4>
+                            <h4>KING CRAB</h4>
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ip sum has been the industry's standard dummy text ever since the 1500s, when an unk- nown printer took a galley of type and scrambled it to make a type specimen book.</p>
                             <a href="#" class="button small">Read More</a>
                         </div>
                         <div>
                             <div class="case-study--left__textslider__image"><i class="fa fa-lightbulb-o" aria-hidden="true"></i></div>
-                            <h4>Accumulate creative ideas</h4>
+                            <h4>LOBSTER</h4>
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ip sum has been the industry's standard dummy text ever since the 1500s, when an unk- nown printer took a galley of type and scrambled it to make a type specimen book.</p>
                             <a href="#" class="button small">Read More</a>
                         </div>
                         <div>
                             <div class="case-study--left__textslider__image"><i class="fa fa-lightbulb-o" aria-hidden="true"></i></div>
-                            <h4>Accumulate creative ideas</h4>
+                            <h4>SALMON</h4>
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ip sum has been the industry's standard dummy text ever since the 1500s, when an unk- nown printer took a galley of type and scrambled it to make a type specimen book.</p>
                             <a href="#" class="button small">Read More</a>
                         </div>
@@ -113,13 +113,13 @@
                 <div class="case-study--right">
                     <div class="case-study--right__imageslider">
                         <div>
-                            <img src="assets/img/case.jpg" alt="" />
+                            <img src="assets/img/king_desc.png" alt="" />
                         </div>
                         <div>
-                            <img src="assets/img/case.jpg" alt="" />
+                            <img src="assets/img/lab_desc.png" alt="" />
                         </div>
                         <div>
-                            <img src="assets/img/case.jpg" alt="" />
+                            <img src="assets/img/sal_desc.png" alt="" />
                         </div>
                     </div>
                 </div>
