--- a/src/styles.css
+++ b/src/styles.css
@@ -432,7 +432,7 @@ a, a:hover, button, button:hover, .btnborder, .btntop {
 
 .statistics {
   padding: 140px 0;
-  background-image: url("assets/img/slider.jpg");
+  background-image: url("assets/img/background.jpeg");
   background-position: center;
   background-attachment: fixed;
   overflow: hidden;
@@ -1452,7 +1452,7 @@ Slider
 
 .intro-page {
   padding: 200px 0 140px;
-  background-image: url("assets/img/slider.jpg");
+  background-image: url("assets/img/background.jpeg");
   background-size: cover;
   background-position: center;
   color: #ffffff;
