--- a/src/app/pages/main/layout/layout.component.html
+++ b/src/app/pages/main/layout/layout.component.html
@@ -1,7 +1,7 @@
 <header>
   <div class="container">
     <div class="logo">
-      <a href="index.html"><img src="assets/img/logo.png" alt="" /></a>
+      <a href="index.html"><img src="assets/img/logo_bluish.png" alt="" /></a>
     </div>
     <div class="menu">
       <ul>
