--- a/src/app/pages/main/layout/layout.component.html
+++ b/src/app/pages/main/layout/layout.component.html
@@ -1,16 +1,16 @@
-<header>
+<header class="sticky-header">
   <div class="container">
     <div class="logo">
       <a href="index.html"><img src="assets/img/logo_bluish.png" alt="" /></a>
     </div>
     <div class="menu">
       <ul>
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="blog.html">Blog</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="" class="active">Home</a></li>
+        <li><a href="about">About</a></li>
+        <li><a href="product">Products</a></li>
+        <li><a href="trade">Trade</a></li>
+        <li><a href="commerce">Commerce</a></li>
+        <li><a href="contact">Contact</a></li>
       </ul>
     </div>
     <div class="mobile-menu"><i class="fa fa-bars"></i></div>
@@ -33,7 +33,7 @@
         </ul>
       </div>
       <div class="col-md-6 col-sm-12">
-        <p><a href="https://rubik-technologies.com/">Rubik Technologies</a></p>
+        <p><a href="#">Rubik Technologies</a></p>
       </div>
     </div>
   </div>
