--- a/src/app/pages/main/banner/banner.component.html
+++ b/src/app/pages/main/banner/banner.component.html
@@ -6,9 +6,10 @@
                     <h3>Our Clinets Are Our First Priority</h3>
                     <h1>WELCOME TO BLUISH GLOBAL</h1>
                     <span class="dot-dash">.</span>
-                    <p>Bluish Global is a global seafood leader with ambitious growth goals and a dedication to sustainability and innovation. We are one of the first specialized companies in its field and has accumulated expertise and advanced infrastructure in the aquaculture, food and seafood industries, wholesale sectors, Trade and the management of a number of seafood restaurants. </p>
-                    <div class="slider-buttons">
-                        <a href="https://www.alasmak.com.sa/en/commercial-sector/index.html" class="button">CONTACT NOW</a>
+                    <p>Bluish Global is a global seafood leader with ambitious growth goals and a dedication to sustainability and innovation.</p>
+                    <p>We are one of the first specialized companies in its field and has accumulated expertise and advanced infrastructure in the aquaculture, food and seafood industries, wholesale sectors, Trade and the management of a number of seafood restaurants.</p>
+                    <div class="slider-buttons" style="margin-top: 100px">
+                        <a href="contact" class="button">CONTACT NOW</a>
                         <!-- <a href="#" class="button button-w">Learn More</a> -->
                     </div>
                 </div>
@@ -74,7 +75,7 @@
                     <h2>Our History</h2>
                     <p>Bluish Global is a global seafood leader with ambitious growth goals and a dedication to sustainability and innovation. We are one of the first specialized companies in its field and has accumulated expertise and advanced infrastructure in the aquaculture, food and seafood industries, wholesale sectors, Trade and the management of a number of seafood restaurants.</p>
                     <p>We agree to fish farms and production plants followed by ice production and storage facilities. In addition, there is a strong supply chain consisting of warehouses and a fleet of refrigerated trucks to maintain the quality of products.</p>
-                    <a href="about.html" class="button">Browse Our Work</a>
+                    <a href="about" class="button">Browse Our Work</a>
                 </div>
             </div>
         </div>
@@ -124,6 +125,101 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+    <section class="statistics">
+        <div class="container">
+            <div class="statistics--item">
+                <div class="statistics--item__image"><i class="fa fa-heart-o"></i></div>
+                <h3 class="odometer first">0</h3>
+                <h5>User Favourites</h5>
+            </div>
+            <div class="statistics--item">
+                <div class="statistics--item__image"><i class="fa fa-tag"></i></div>
+                <h3 class="odometer second">0</h3>
+                <h5>User Favourites</h5>
+            </div>
+            <div class="statistics--item">
+                <div class="statistics--item__image"><i class="fa fa-thumbs-o-up"></i></div>
+                <h3 class="odometer third">0</h3>
+                <h5>User Favourites</h5>
+            </div>
+            <div class="statistics--item">
+                <div class="statistics--item__image"><i class="fa fa-star-o"></i></div>
+                <h3 class="odometer fourth">0</h3>
+                <h5>User Favourites</h5>
+            </div>
+            <div class="statistics--item">
+                <div class="statistics--item__image"><i class="fa fa-paperclip"></i></div>
+                <h3 class="odometer fifth">0</h3>
+                <h5>User Favourites</h5>
+            </div>
+        </div>
+    </section>
+    <section class="partners">
+        <div class="container">
+            <h2>Great Integrations with Others</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <span class="dot-dash dark">.</span>
+            <div class="partners--container">
+                <div class="partners--item">
+                    <div class="partners--item__image">
+                        <img src="assets/img/partner1.png" alt="">
+                    </div>
+                </div>
+                <div class="partners--item">
+                    <div class="partners--item__image">
+                        <img src="assets/img/partner1.png" alt="">
+                    </div>
+                </div>
+                <div class="partners--item">
+                    <div class="partners--item__image">
+                        <img src="assets/img/partner1.png" alt="">
+                    </div>
+                </div>
+                <div class="partners--item">
+                    <div class="partners--item__image">
+                        <img src="assets/img/partner1.png" alt="">
+                    </div>
+                </div>
+                <div class="partners--item">
+                    <div class="partners--item__image">
+                        <img src="assets/img/partner1.png" alt="">
+                    </div>
+                </div>
+                <div class="partners--item">
+                    <div class="partners--item__image">
+                        <img src="assets/img/partner1.png" alt="">
+                    </div>
+                </div>
+                <div class="partners--item">
+                    <div class="partners--item__image">
+                        <img src="assets/img/partner1.png" alt="">
+                    </div>
+                </div>
+                <div class="partners--item">
+                    <div class="partners--item__image">
+                        <img src="assets/img/partner1.png" alt="">
+                    </div>
+                </div>
+                <div class="partners--item">
+                    <div class="partners--item__image">
+                        <img src="assets/img/partner1.png" alt="">
+                    </div>
+                </div>
+                <div class="partners--item">
+                    <div class="partners--item__image">
+                        <img src="assets/img/partner1.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="get-started">
+        <div class="container">
+            <h2>Let's Get Started Now. It's FREE!</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <a href="contact.html" class="button">Start Free Trial</a>
         </div>
     </section>
 </div>
