작업 진행 중

--- a/src/app/pages/main/about/about.component.html
+++ b/src/app/pages/main/about/about.component.html
@@ -31,8 +31,8 @@
             <img src="assets/img/user.png" alt="" />
           </div>
           <div class="our-team--item__info">
-            <h3>John Doe</h3>
-            <h5>UI/UX Designer</h5>
+            <h3>Steve Yoon</h3>
+            <h5>Head Officer</h5>
           </div>
         </div>
         <div class="our-team--item">
@@ -40,8 +40,8 @@
             <img src="assets/img/user.png" alt="" />
           </div>
           <div class="our-team--item__info">
-            <h3>John Doe</h3>
-            <h5>UI/UX Designer</h5>
+            <h3>Royce Cho</h3>
+            <h5>Local Sales</h5>
           </div>
         </div>
         <div class="our-team--item">
@@ -49,8 +49,8 @@
             <img src="assets/img/user.png" alt="" />
           </div>
           <div class="our-team--item__info">
-            <h3>John Doe</h3>
-            <h5>UI/UX Designer</h5>
+            <h3>Bentley Sung</h3>
+            <h5>Overseas Sales</h5>
           </div>
         </div>
         <div class="our-team--item">
@@ -58,8 +58,8 @@
             <img src="assets/img/user.png" alt="" />
           </div>
           <div class="our-team--item__info">
-            <h3>John Doe</h3>
-            <h5>UI/UX Designer</h5>
+            <h3>Hui Choi</h3>
+            <h5>Sales Assistant</h5>
           </div>
         </div>
         <div class="our-team--item">
@@ -67,8 +67,8 @@
             <img src="assets/img/user.png" alt="" />
           </div>
           <div class="our-team--item__info">
-            <h3>John Doe</h3>
-            <h5>UI/UX Designer</h5>
+            <h3>Ella Yoon</h3>
+            <h5>Finance Management</h5>
           </div>
         </div>
       </div>
@@ -91,39 +91,11 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>2009-2011</h4>
+                  <h4>October 2019</h4>
                   <h4 class="subheading">Our Humble Beginnings</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                </div>
-              </div>
-            </li>
-            <li class="timeline-inverted">
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="assets/img/about2.jpg" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h4>March 2011</h4>
-                  <h4 class="subheading">An Agency is Born</h4>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="assets/img/about3.jpg" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h4>December 2012</h4>
-                  <h4 class="subheading">Transition to Full Service</h4>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                  <p class="text-muted">Bluish Global was established in October 2019 under the ideology of returning profits to producers and consumers by reducing unnecessary intermediate trading processes occurring in the global fisheries industry, including Korea.</p>
                 </div>
               </div>
             </li>
@@ -133,11 +105,53 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>July 2014</h4>
+                  <h4>December 2019</h4>
+                  <h4 class="subheading">Take a leap forward</h4>
+                </div>
+                <div class="timeline-body">
+                  <p class="text-muted">Based on our old know-how in the fisheries industry and wide and reliable business relationships, we have gained opportunities as a distributor to handle under-valid products, laying the foundation for a comprehensive trading company that deals with various building materials, machinery, and raw materials in addition to fisheries.</p>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="timeline-image">
+                <img class="rounded-circle img-fluid" src="assets/img/about2.jpg" alt="">
+              </div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4>July 2020</h4>
+                  <h4 class="subheading">Importing Live King Crab</h4>
+                </div>
+                <div class="timeline-body">
+                  <p class="text-muted">Our company's main item was selected as King Crab, and for the first time, Chile King Crab was imported and distributed in Korea. Our main suppliers are Norway Coast Seafoods, Norfra, Troika and Bergen. At the same time, frozen self-contained lobsters also recruited new domestic customers and started distribution.</p>
+                </div>
+              </div>
+            </li>
+            <li class="timeline-inverted">
+              <div class="timeline-image">
+                <img class="rounded-circle img-fluid" src="assets/img/about2.jpg" alt="">
+              </div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4>November 2020</h4>
                   <h4 class="subheading">Phase Two Expansion</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                  <p class="text-muted">Starting with the COVID-19 era, our company started online sales of Live King Crab and Live Lobster to play a preemptive role in the seafood market.At the same time, Russian live king crab began to be exported to the Philippines, and it has been firmly maintaining its relationship with Filipino buyers for more than a year.</p>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="timeline-image">
+                <img class="rounded-circle img-fluid" src="assets/img/about3.jpg" alt="">
+              </div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4>December 2021</h4>
+                  <h4 class="subheading">Forward to another Level</h4>
+                </div>
+                <div class="timeline-body">
+                  <p class="text-muted">With the aim of expanding the overseas market in earnest after two years of establishment, our company is busy supplying live Russian crab and Korean seafood to buyers around the world at reasonable prices, and at the same time signed contracts with domestic franchise companies to start distributing shrimp/lobsters to leap forward in 2022.</p>
                 </div>
               </div>
             </li>
