--- a/src/styles.css
+++ b/src/styles.css
@@ -687,17 +687,19 @@ a, a:hover, button, button:hover, .btnborder, .btntop {
       -webkit-justify-content: center;
       -ms-flex-pack: center;
       justify-content: center;
-      padding: 25px;
+      /* padding: 25px; */
       height: 100px;
       -webkit-box-shadow: 0 2px 5px rgba(173, 173, 173, 0.2);
       box-shadow: 0 2px 5px rgba(173, 173, 173, 0.2); }
       .partners--item__image img {
-        -webkit-filter: grayscale(0) brightness(0) contrast(0);
+        /* -webkit-filter: grayscale(0) brightness(0) contrast(0);
         filter: grayscale(0) brightness(0) contrast(0);
         -webkit-transition: all 0.3s ease;
-        transition: all 0.3s ease; }
+        transition: all 0.3s ease;  */
+      }
     .partners--item:hover .partners--item__image {
-      background: #3c88e7; }
+      /* background: #3c88e7;  */
+    }
       .partners--item:hover .partners--item__image img {
         -webkit-filter: none;
         filter: none; }
@@ -1196,7 +1198,7 @@ header {
     header .menu li a {
       display: block;
       font: 600 14px "Open Sans";
-      color: black;
+      color:dimgrey;
       text-transform: uppercase; }
       header .menu li a.active, header .menu li a:hover {
         color: #3c88e7; }
@@ -1223,10 +1225,11 @@ header {
       margin: 0 0 20px;
       width: 100%; }
       header .menu li a {
+        color:whitesmoke ;
         font-size: 16px; }
   header .mobile-menu {
     display: block;
-    color: #ffffff;
+    color:#3c88e7;
     font-size: 25px; } }
 
 @media screen and (max-width: 575px) {
