--- a/src/app/pages/main/banner/banner.component.html
+++ b/src/app/pages/main/banner/banner.component.html
@@ -129,7 +129,7 @@
     </section>
     <section class="statistics">
         <div class="container">
-            <div class="statistics--item">
+            <!-- <div class="statistics--item">
                 <div class="statistics--item__image"><i class="fa fa-heart-o"></i></div>
                 <h3 class="odometer first">0</h3>
                 <h5>User Favourites</h5>
@@ -153,7 +153,7 @@
                 <div class="statistics--item__image"><i class="fa fa-paperclip"></i></div>
                 <h3 class="odometer fifth">0</h3>
                 <h5>User Favourites</h5>
-            </div>
+            </div> -->
         </div>
     </section>
     <section class="partners">
@@ -164,47 +164,47 @@
             <div class="partners--container">
                 <div class="partners--item">
                     <div class="partners--item__image">
-                        <img src="assets/img/partner1.png" alt="">
+                        <img src="assets/img/p1.png" alt="">
                     </div>
                 </div>
                 <div class="partners--item">
                     <div class="partners--item__image">
-                        <img src="assets/img/partner1.png" alt="">
+                        <img src="assets/img/p2.png" alt="">
                     </div>
                 </div>
                 <div class="partners--item">
                     <div class="partners--item__image">
-                        <img src="assets/img/partner1.png" alt="">
+                        <img src="assets/img/p3.jpeg" alt="">
                     </div>
                 </div>
                 <div class="partners--item">
                     <div class="partners--item__image">
-                        <img src="assets/img/partner1.png" alt="">
+                        <img src="assets/img/p4.jpeg" alt="">
                     </div>
                 </div>
                 <div class="partners--item">
                     <div class="partners--item__image">
-                        <img src="assets/img/partner1.png" alt="">
+                        <img src="assets/img/p5.png" alt="">
                     </div>
                 </div>
                 <div class="partners--item">
                     <div class="partners--item__image">
-                        <img src="assets/img/partner1.png" alt="">
+                        <img src="assets/img/p6.png" alt="">
                     </div>
                 </div>
                 <div class="partners--item">
                     <div class="partners--item__image">
-                        <img src="assets/img/partner1.png" alt="">
+                        <img src="assets/img/p7.png" alt="">
                     </div>
                 </div>
                 <div class="partners--item">
                     <div class="partners--item__image">
-                        <img src="assets/img/partner1.png" alt="">
+                        <img src="assets/img/p8.png" alt="">
                     </div>
                 </div>
                 <div class="partners--item">
                     <div class="partners--item__image">
-                        <img src="assets/img/partner1.png" alt="">
+                        <img src="assets/img/p9.png" alt="">
                     </div>
                 </div>
                 <div class="partners--item">
@@ -217,9 +217,9 @@
     </section>
     <section class="get-started">
         <div class="container">
-            <h2>Let's Get Started Now. It's FREE!</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-            <a href="contact.html" class="button">Start Free Trial</a>
+            <h2>BLUISH GLOBAL is the best No.1 Seafood Company</h2>
+            <p>We will be the best in the world beyond Korea.</p>
+            <a href="/contact" class="button">Make a connection</a>
         </div>
     </section>
 </div>
